<resources>
    <string name="app_name">Helper_Royale</string>
    <string name="editText_TelaLogin_TagClash">Insira a Sua Tag do Clash Aqui!</string>
    <string name="editText_TelaLogin_SenhaClash">Insira a Sua Senha do App Aqui!</string>
    <string name="Button_TelaLogin_IrParaCadastro">Ainda não possui cadastro no app? Clique Aqui!</string>
    <string name="Button_TelaLogin_IrParaTelaPrincipal">Entrar</string>
    <string name="Label_TelaCadastro_TextoRealize">Realize o seu cadastro!</string>
    <string name="TextView_TelaCadastro_TextoNome"></string>
    <string name="editText_TelaCadastro_InsiraNome">insira um nome:</string>
    <string name="Label_TelaCadastro_TagClash">Tag do clash royale</string>
    <string name="editText_TelaCadastro_TagClash">insira a tag de sua conta</string>
    <string name="TextView_TelaCadastro_Senha">Senha:</string>
    <string name="editText_TelaCadastro_inserirSenha"></string>
    <string name="TextView_TelaCadastro_ConfirmarSenha">Confirmar senha</string>
    <string name="editText_TelaCadastro_inserirConfirmarSenha"></string>
    <string name="Button_TelaCadastro_Cadastrar">Cadastrar</string>
    <string name="TextView_TelaCadastro_NomeUsu">Username</string>
    <string name="TextView_TelaPerfil_MaxTrofeu">Máximo de troféus:</string>
    <string name="TextView_TelaPerfil_ClaPresente">Clã Presente:</string>
    <string name="TextView_TelaPerfil_TrofeusAtuais">Troféus atuais:</string>
    <string name="TextView_TelaPerfil_DataClash">Entrou no Clash Royale em:</string>
    <string name="TextView_TelaPerfil_ArenaAtual">Arena atual:</string>
    <string name="TextView_TelaMenuPrin_TituloMenu">Bem-vindo ao menu principal!</string>
    <string name="Button_TelaMenuPrin_IrparaListaBaus">Lista dos próximos baús</string>
    <string name="Button_TelaMenuPrin_IrparaCla">Clã</string>
    <string name="Button_TelaMenuPrin_IrparaPerfil">Minha Conta</string>
    <string name="Button_TelaMenuPrinSlide_LogOut">Log Out</string>
    <string name="TextView_TelaListaBaus_QtdPartidas">Quantidade de partidas até o próximo baú:</string>
    <string name="TextView_TelaListaBaus_Bau">Baú:</string>
    <string name="TextView_TelaCadastro_TemplateUsu">Usuário</string>
    <string name="title_activity_lista_de_baus">activity_lista_de_baus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>