<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_cadastroPerfil" >

    <TextView
        android:id="@+id/textView_TelaCadastro_TemplateNomeUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="-260dp"
        android:layout_marginBottom="30dp"
        android:text="@string/TextView_TelaCadastro_TemplateUsu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <EditText
        android:id="@+id/editText_TelaCadastro_ConSenha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="-350dp"
        android:ems="10"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <TextView
        android:id="@+id/textView_TelaCadastro_ConSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="-260dp"
        android:layout_marginBottom="30dp"
        android:text="@string/TextView_TelaCadastro_ConfirmarSenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/editText_TelaCadastro_Senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="-350dp"
        android:ems="10"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView_TelaCadastro_Senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="-260dp"
        android:layout_marginBottom="30dp"
        android:text="@string/TextView_TelaCadastro_Senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="26dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fundo_cor_clashroyale" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="46dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fundo_cor_clashroyale" />

    <TextView
        android:id="@+id/textView_TelaCadastro_Tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-500dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Label_TelaCadastro_TagClash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <EditText
        android:id="@+id/editText_TelaCadastro_Tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="-350dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <ImageView
        android:id="@+id/imageView_TelaCadastro_TemplateUsu"
        android:layout_width="152dp"
        android:layout_height="186dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:srcCompat="@drawable/icone_logoclash"
        tools:srcCompat="@drawable/icone_logoclash"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_TelaCadastro_CadastroUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_TelaCadastro_Cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />
</androidx.constraintlayout.widget.ConstraintLayout>